# mygrpc

./: Cargo.toml  README  build.rs
js/: build_proto.sh  compile_client.sh  install_protoc-gen-grpc-web.sh  package-lock.json  package.json
js/src/: client.js  grpc_client.js  index.html
js/src/proto/: tower_grpc_web_pb.js  tower_pb.js
proto/: Cargo.toml  tower.proto
proto/src/: lib.rs  mytowerproto.rs
src/: lib.rs  main.rs  service.rs  service_test.rs
